Tue Nov 30 18:05:30 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp:

          Put code generation back in that was inadvertently
          removed in a previous checkin.

Mon Nov 29 19:02:18 UTC 2010  Martin Corino  <corino_m@remedy.nl>

        * tests/Abstract_Interface/client.cpp:
          Fixed test so now it really runs the null-test part.

Mon Nov 29 17:11:52 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_array.cpp:
        * TAO_IDL/be/be_visitor_array/array_ch.cpp:

          Cosmetic changes.

        * TAO_IDL/be/be_visitor_traits.cpp:

          - Removed code that prevented the visitor from finding
            anonymous arrays nested more than one level deep. Thanks
            to Shi John <John dot Shi at acxiom dot com> for
            sending in the IDL example that uncovered the problem.

          - Fixed problem with traits generation for an interface
            that contains itself recursively.

        * tests/IDL_Test/anonymous.idl:

          Added IDL example mentioned above to test coverage.

Mon Nov 29 15:26:46 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_visitor_reifying.cpp:
        * TAO_IDL/util/utl_scope.cpp:

          Removed unused local variables.

>>>>>>> .r92751
Fri Nov 26 22:30:25 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_connector/connector_ami_rh_exs.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_ami_rh_exh.cpp:
        * TAO_IDL/be_include/be_visitor_connector/connector_ami_rh_exh.h:
        * TAO_IDL/be_include/be_visitor_connector/connector_ami_rh_exs.h:

          Removed these visitors, they are replaced by the new ones below.

        * TAO_IDL/be_include/be_visitor_component/component_ami_rh_exs.h:
        * TAO_IDL/be_include/be_visitor_component/component_ami_rh_exh.h: